KNL-184 remove javadoc plugin memory settings
git-svn-id: https://source.sakaiproject.org/svn/kernel/trunk@62037 66ffb92e-73f9-0310-93c1-f5514f145a0a