@@ -703,11 +703,6 @@
 					</links>
 					<breakiterator>true</breakiterator>
 					<verbose>false</verbose>
-					<maxmemory>512m</maxmemory>
-					<additionalJOption>
-						-J-Xms168m -J-Xmx512m -J-XX:PermSize=128m
-						-J-XX:NewSize=64m
-					</additionalJOption>
 				</configuration>
 			</plugin>
 			<plugin>
